--- a/pages/Main.html
+++ b/pages/Main.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="../Images/CSULALogo.png">
 
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main-styles.css">
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/navbar-styles.css">
 
