--- a/pages/previous-projects.html
+++ b/pages/previous-projects.html
@@ -49,7 +49,7 @@
                             <li><a href="officers.html?id=1">President</a></li>
                             <li><a href="officers.html?id=2">Vice President</a></li>
                             <li><a href="officers.html?id=3">Treasurer</a></li>
-                            <li><a href="officers.html?id=4">Public Relations</a></li>
+                            <li><a href="officers.html?id=4">Additional Officers</a></li>
                         </ul>
                     </li>
                 </ul>
