--- a/pages/Main.html
+++ b/pages/Main.html
@@ -57,7 +57,7 @@
                                 <li><a href="officers.html?id=1">President</a></li>
                                 <li><a href="officers.html?id=2">Vice President</a></li>
                                 <li><a href="officers.html?id=3">Treasurer</a></li>
-                                <li><a href="officers.html?id=4">Public Relations</a></li>
+                                <li><a href="officers.html?id=4">Additional Officers</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -114,11 +114,12 @@
                             </h3>
                         </div>
                         <div class="well">
-                            <p>We are the only Film club on campus that actually does anything! You are free to join
-                                Golden Eagle Film or whatever they're called if you wish, but you will find nothing but
-                                sore
-                                disappointment! We hope that you keep us in careful consideration as I continue to type
-                                nonsense into this paragraph to fill up the space!
+                            <p>Film Productions is a student-run and student-led organization that focuses on the production of narrative short films.
+                                The club’s members are responsible for every step of production from conception to distribution.
+                                Through practical experience and several leadership opportunities,
+                                Film Productions hopes to artistically and professionally enrich Cal State LA students
+                                with any amount of interest in filmmaking.
+
                             </p>
                             <a class="btn btn-primary center-block" href="previous-projects.html">
                                 Wanna see our work?
@@ -137,15 +138,15 @@
                         </div>
                         <div class="well">
                             <p>
-                                We are currently exercising our squatting rights in the Music room 216 and 119! You see,
-                                the
-                                film
-                                department
-                                is not very fond of us, and has expressed this in the fact that they will not give us a
-                                legitimate
-                                room. Nevertheless, we will be meeting in <b>MUS 216 on Wednesdays at 2:45pm</b> and on
-                                <b>Thursdays
-                                    at 2:00pm in MUS 119</b>
+                                Email Address:<a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top"> FilmProductionsLA@gmail.com
+                                              </a> <br/>
+
+                                Phone Number: <b>(323) 450-7477</b> <br/>
+
+                                Instagram and Facebook: <b>@FilmProductionsLA</b><br/>
+
+                                YouTube: <a href="http://www.youtube.com/FilmProductionsLA">FilmProductionsLA</a> <br/>
+
                             </p>
                             <a class="btn btn-info center-block" href="contact.html">
                                 Need to contact us?
@@ -164,17 +165,12 @@
                         </div>
                         <div class="well">
                             <p>
-                                This is where you would (probably) provide some long, well thought out paragraph of the
-                                benefits
-                                of joining your wonderful club. But since I don't know those reasons, instead I shall
-                                refer you
-                                to the humble origins of the Ceasar Salad. The Caesar Salad Was Invented In Mexico.
-                                Legend
-                                has it that Italian-American restaurateur Caesar Cardini invented the salad in 1924 in
-                                Tijuana,
-                                Mexico. According to The Telegraph, Cardini owned a restaurant in the tourist
-                                destination to
-                                “attract Americans frustrated by Prohibition.”
+                                If you’re a film student, education isn’t everything - there’s no better way to practice your craft than to get out there and do it. We provide a solid foundation of resources and support for you to exercise your talents outside of the classroom.<br/><br/>
+
+                                If you aren’t a film student but can’t resist the allure of show business, Film Productions is the club for you! Experienced officers and fellow club members will instruct you on your journey to become an independent filmmaker alongside them.<br/><br/>
+
+                                Whatever your interests are - whether they’re being on camera and seeing your performance on the big screen, developing skills in lighting in camerwork, writing your first screenplay, or anything else - Film Productions will provide an opportunity for you to do it. All you have to do is sign up.<br/><br/>
+
                             </p>
                             <a class="btn btn-success center-block" href="joinApplication.html">
                                 Click Here to Join!
