--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -46,7 +46,7 @@
                             <li><a href="officers.html?id=1">President</a></li>
                             <li><a href="officers.html?id=2">Vice President</a></li>
                             <li><a href="officers.html?id=3">Treasurer</a></li>
-                            <li><a href="officers.html?id=4">Public Relations</a></li>
+                            <li><a href="officers.html?id=4">Additional Officers</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -69,7 +69,7 @@
         </center>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
-                <iframe class="calendar" src="https://www.google.com/calendar/embed?src=acm.calstatela%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+                <iframe class="calendar" src="https://calendar.google.com/calendar/embed?src=filmproductionsla%40gmail.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
     </div>
