--- a/pages/Main.html
+++ b/pages/Main.html
@@ -42,18 +42,23 @@
                                 Contact<span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a href="contact.html">All Media</a></li>
                                 <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
-                                <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
+                                </li>
+                                <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
+                                       target="_blank">YouTube</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                                 <li><a href="contact.html">Email</a></li>
                             </ul>
 
-                        <li  class="dropdown">
-                            <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                        <li class="dropdown">
+                            <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                               aria-haspopup="true"
                                aria-expanded="false">Officers<span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a href="officers.html">All Officers</a></li>
                                 <li><a href="officers.html?id=1">President</a></li>
                                 <li><a href="officers.html?id=2">Vice President</a></li>
                                 <li><a href="officers.html?id=3">Treasurer</a></li>
@@ -172,7 +177,7 @@
                                 Whatever your interests are - whether they’re being on camera and seeing your performance on the big screen, developing skills in lighting in camerwork, writing your first screenplay, or anything else - Film Productions will provide an opportunity for you to do it. All you have to do is sign up.<br/><br/>
 
                             </p>
-                            <a class="btn btn-success center-block" href="joinApplication.html">
+                            <a class="btn btn-success center-block" href="https://docs.google.com/forms/d/e/1FAIpQLSeEZunJrcs69eSqEgisZVL1QZsuhsBVG7XkrGjHWtZvHmBbHg/viewform?usp=sf_link" target="_blank">
                                 Click Here to Join!
                             </a>
                         </div>
