--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,22 +38,27 @@
                         Contact<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="contact.html">All Media</a></li>
                         <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
-                        <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">YouTube</a></li>
+                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
+                        </li>
+                        <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
+                               target="_blank">YouTube</a></li>
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                        <li><a href="officers.html?id=4">Additional Officers</a></li>
+                        <li><a href="contact.html">Email</a></li>
                     </ul>
 
-                <li  class="dropdown">
-                    <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                <li class="dropdown">
+                    <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                       aria-haspopup="true"
                        aria-expanded="false">Officers<span class="caret"></span></a>
                     <ul class="dropdown-menu">
+                        <li><a href="officers.html">All Officers</a></li>
                         <li><a href="officers.html?id=1">President</a></li>
                         <li><a href="officers.html?id=2">Vice President</a></li>
                         <li><a href="officers.html?id=3">Treasurer</a></li>
-                        <li><a href="officers.html?id=4">Public Relations</a></li>
+                        <li><a href="officers.html?id=4">Additional Officers</a></li>
                     </ul>
                 </li>
             </ul>
