--- a/pages/Main.html
+++ b/pages/Main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 
     <!-- Latest compiled and minified CSS -->
 
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="../css/main-styles.css">
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
-    <link rel="stylesheet" href="../css/navbar-styles.css">
+    <link rel="stylesheet" href="../css/global-styles.css">
 
     <script async defer src="http://platform.instagram.com/en_US/embeds.js"></script>
 
@@ -29,42 +29,46 @@
         <!--------------------------------START NAVBAR------------------------------>
         <nav class="navbar navbar-custom navbar-fixed-top">
             <div class="container">
+                <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
+                    <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+                </a>
+
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active-tab"><a href="Main.html">Home</a></li>
+                        <li><a href="Main.html">Home</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
-                        <li><a href="previous-projects.html">Previous Projects</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="officers.html">Officers</a></li>
                         <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                        <li class="dropdown">
+                        <li class="dropdown active-tab">
                             <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">
                                 Contact<span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="contact.html">All Media</a></li>
-                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-                                </li>
+                                <li><a href="contact.html">Email</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                        target="_blank">YouTube</a></li>
+                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                                <li><a href="contact.html">Email</a></li>
                             </ul>
 
-                        <li class="dropdown">
-                            <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                               aria-haspopup="true"
-                               aria-expanded="false">Officers<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="officers.html">All Officers</a></li>
-                                <li><a href="officers.html?id=1">President</a></li>
-                                <li><a href="officers.html?id=2">Vice President</a></li>
-                                <li><a href="officers.html?id=3">Treasurer</a></li>
-                                <li><a href="officers.html?id=4">Additional Officers</a></li>
-                            </ul>
-                        </li>
+                            <!--<li class="dropdown">-->
+                            <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
+                            <!--aria-haspopup="true"-->
+                            <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
+                            <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="officers.html">All Officers</a></li>-->
+                            <!--<li><a href="officers.html?id=1">President</a></li>-->
+                            <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
+                            <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
+                            <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
+                            <!--</ul>-->
+                            <!--</li>-->
                     </ul>
 
                 </div>
@@ -84,7 +88,8 @@
                         <!--<div class="col-xs-offset-6 col-xs-2">-->
                             <!--<img src="../Images/FPC%20Camera.png" class="img-responsive">-->
                         <!--</div>-->
-                        <div class="text-right col-4">
+                        <img class="col-xs-offset-5 col-xs-2" src="../Images/FPC%20Camera.png">
+                        <div class="text-right col-xs-4 col-xs-offset-1">
                             <h1>
                                 <strong>Film Productions Club</strong><br/>
                                 <small>Cal State LA</small>
@@ -101,21 +106,18 @@
 
             <!-------------------------START PAGE CONTENT----------------------------->
 
-            <!-- Add the floating gif -->
-            <div class="gif-container">
-                <img class="gif" src="../Images/combo(framed).gif" >
-                <!--<img class="gif second-gif" src="../Images/logomovies.gif">-->
-                <!--<img class="gif third-gif" src="../Images/meeting.gif">-->
-                <!--<img class="gif" src="../Images/combinedgifs.gif">-->
-            </div>
+            <!------------- Add the floating gif --------------->
+            <!--<div class="gif-container">-->
+                <!--<img class="gif" src="../Images/combo(framed).gif" >-->
+            <!--</div>-->
 
             <div class="container">
                 <!-- Begin our first row of data -->
                 <div class="row">
-                    <div class="col-xs-8 col-xs-offset-4">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="page-header">
-                            <h3>
-                                Who Are We?
+                            <h3 style="text-align: center">
+                                What is Film Productions?
                             </h3>
                         </div>
                         <div class="well">
@@ -126,7 +128,7 @@
                                 with any amount of interest in filmmaking.
 
                             </p>
-                            <a class="btn btn-primary center-block" href="previous-projects.html">
+                            <a class="btn btn-gold center-block" href="projects.html">
                                 Wanna see our work?
                             </a>
                         </div>
@@ -135,10 +137,10 @@
 
                 <!-- Begin Second Row-->
                 <div>
-                    <div class="col-xs-7 col-xs-offset-5">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="page-header">
-                            <h3 style="text-align: right">
-                                Where Can You Find Us?
+                            <h3 style="text-align: center">
+                                How Can You Contact Us?
                             </h3>
                         </div>
                         <div class="well">
@@ -153,7 +155,7 @@
                                 YouTube: <a href="http://www.youtube.com/FilmProductionsLA">FilmProductionsLA</a> <br/>
 
                             </p>
-                            <a class="btn btn-info center-block" href="contact.html">
+                            <a class="btn btn-gold center-block" href="contact.html">
                                 Need to contact us?
                             </a>
                         </div>
@@ -162,7 +164,7 @@
 
                 <!-- Begin Third Row-->
                 <div class="row">
-                    <div class="col-xs-8 col-xs-offset-4">
+                    <div class="col-xs-8 col-xs-offset-2">
                         <div class="page-header">
                             <h3 style="text-align: center">
                                 Why Should You Join Us?
@@ -177,7 +179,7 @@
                                 Whatever your interests are - whether they’re being on camera and seeing your performance on the big screen, developing skills in lighting in camerwork, writing your first screenplay, or anything else - Film Productions will provide an opportunity for you to do it. All you have to do is sign up.<br/><br/>
 
                             </p>
-                            <a class="btn btn-success center-block" href="https://docs.google.com/forms/d/e/1FAIpQLSeEZunJrcs69eSqEgisZVL1QZsuhsBVG7XkrGjHWtZvHmBbHg/viewform?usp=sf_link" target="_blank">
+                            <a class="btn btn-gold center-block" href="https://docs.google.com/forms/d/e/1FAIpQLSeMVL3I36a4X3QIkN6EQV3-BIrSXco6ozpO_Y2809Y-QrFtpA/viewform?usp=sf_link" target="_blank">
                                 Click Here to Join!
                             </a>
                         </div>
@@ -190,7 +192,7 @@
 
     <footer>
         <div class="well well-sm text-center" style="margin-top: 50px">
-            &copy; 2017 Film Productions Club @ CSULA. All Rights Reserved.
+            &copy; 2017 Film Productions Club @ Cal State LA. All Rights Reserved.
         </div>
     </footer>
 
