--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -7,53 +7,56 @@
     <link rel="icon" href="../Images/CSULALogo.png">
 
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
-    <link rel="stylesheet" href="../css/navbar-styles.css">
+    <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/calendarStyles.css">
-
 </head>
+
 <body style="background-color: black">
 <div>
 
 
     <!--------------------------------START NAVBAR------------------------------>
     <nav class="navbar navbar-custom navbar-fixed-top">
-        <div class="container">
+        <div class="container ">
+            <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
+                <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+            </a>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="Main.html">Home</a></li>
-                    <li class="active-tab"><a href="calendar.html">Calendar</a></li>
-                    <li><a href="previous-projects.html">Previous Projects</a></li>
+                    <li><a href="calendar.html">Calendar</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="officers.html">Officers</a></li>
                     <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                    <li class="dropdown">
+                    <li class="dropdown active-tab">
                         <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">
                             Contact<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="contact.html">All Media</a></li>
-                            <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                            <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-                            </li>
+                            <li><a href="contact.html">Email</a></li>
+                            <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                             <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                    target="_blank">YouTube</a></li>
+                            <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                             <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                             <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                            <li><a href="contact.html">Email</a></li>
                         </ul>
 
-                    <li class="dropdown">
-                        <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                           aria-haspopup="true"
-                           aria-expanded="false">Officers<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="officers.html">All Officers</a></li>
-                            <li><a href="officers.html?id=1">President</a></li>
-                            <li><a href="officers.html?id=2">Vice President</a></li>
-                            <li><a href="officers.html?id=3">Treasurer</a></li>
-                            <li><a href="officers.html?id=4">Additional Officers</a></li>
-                        </ul>
-                    </li>
+                        <!--<li class="dropdown">-->
+                        <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
+                        <!--aria-haspopup="true"-->
+                        <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="officers.html">All Officers</a></li>-->
+                        <!--<li><a href="officers.html?id=1">President</a></li>-->
+                        <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
+                        <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
+                        <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
+                        <!--</ul>-->
+                        <!--</li>-->
                 </ul>
 
             </div>
@@ -63,14 +66,18 @@
     </nav>
     <!----------------------------------END NAVBAR-------------------------------------->
 
+    <span id="calendarTitle">Film Productions</span>
+
 
     <header style="margin-top: 75px; text-align: center">
         <h2>Calendar</h2>
     </header>
     <div class="container">
+
+
         <center>
             <h4>You may sync our Calendar to yours and keep up with all our events and meetings.</h4>
-            <p>Simply <a href="https://calendar.google.com/calendar/ical/acm.calstatela%40gmail.com/public/basic.ics">click</a></p>
+            <p>Simply <a href="#">click</a></p>
         </center>
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1">
