--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../Images/CSULALogo.png">
 
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
-    <link rel="stylesheet" href="../css/navbar-styles.css">
+    <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/contact-styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400, 700" rel="stylesheet" type="text/css">
@@ -24,12 +24,16 @@
 
 <!--------------------------------START NAVBAR------------------------------>
 <nav class="navbar navbar-custom navbar-fixed-top">
-    <div class="container">
+    <div class="container ">
+        <a class="navbar-brand hidden-sm" href="http://http://www.calstatela.edu/">
+            <img alt="acm" src="../Images/CalStateLaLogo.png" class="csula-icon hidden-xs hidden-sm">
+        </a>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="Main.html">Home</a></li>
                 <li><a href="calendar.html">Calendar</a></li>
-                <li><a href="previous-projects.html">Previous Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="officers.html">Officers</a></li>
                 <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
                 <li class="dropdown active-tab">
@@ -39,28 +43,27 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="contact.html">All Media</a></li>
-                        <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
-                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-                        </li>
+                        <li><a href="contact.html">Email</a></li>
+                        <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
                         <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                target="_blank">YouTube</a></li>
+                        <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
-                        <li><a href="contact.html">Email</a></li>
                     </ul>
 
-                <li class="dropdown">
-                    <a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                       aria-haspopup="true"
-                       aria-expanded="false">Officers<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="officers.html">All Officers</a></li>
-                        <li><a href="officers.html?id=1">President</a></li>
-                        <li><a href="officers.html?id=2">Vice President</a></li>
-                        <li><a href="officers.html?id=3">Treasurer</a></li>
-                        <li><a href="officers.html?id=4">Additional Officers</a></li>
-                    </ul>
-                </li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
+                       <!--aria-haspopup="true"-->
+                       <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="officers.html">All Officers</a></li>-->
+                        <!--<li><a href="officers.html?id=1">President</a></li>-->
+                        <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
+                        <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
+                        <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
 
         </div>
@@ -74,88 +77,92 @@
     <h2 class="title">
         Social Media
     </h2>
-    <h3 class="list">
-        <a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>
-        <a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">
-            <img src="../Images/facebookLogo.png" class="logo-images" >
-        </a>
-    </h3>
-    <h3 class="list">
-        <a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
-        <a href="https://www.instagram.com/filmproductionsla/" target="_blank">
-            <img src="../Images/insta.png" class="logo-images">
-        </a>
-    </h3>
-    <h3 class="list">
-        <a href="https://twitter.com/csulafp" target="_blank">Twitter</a>
-        <a href="https://twitter.com/csulafp" target="_blank">
-            <img src="../Images/Twitter-icon.png" class="logo-images">
-        </a>
-    </h3>
-    <h3 class="list">
-        <a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a>
-        <a  href="../Images/Snapcode%20Cropped.png" target="_blank">
-            <img src="../Images/Snapcode%20Cropped.png" class="logo-images">
-        </a>
-    </h3>
-    <h3 class="list">
-        <a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">Email</a>
-        <a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">
-            <img class="logo-images" src="../Images/GmailICON.ico" >
-        </a>
-    </h3>
-</div>
+    <div class="container">
+        <div class="row">
+            <!--<h3 class="list">-->
+                <!--<a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">Email</a>-->
+                <a class="col-xs-4" href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions" target="_top">
+                    <img class="logo-images" style="filter:grayscale(0%)" src="../Images/gmail-icon.png">
+                </a>
+            <!--</h3>-->
 
-<!---------------------- START Instagram Feed ----------------------------->
-<script type="text/javascript">
-    var feed = new Instafeed({
-        get: 'user',
-        userId: '1055527561',
-        sortBy: 'most-recent',
-        limit: '10',
-        accessToken: '1055527561.1677ed0.554b0c70d38647059ef0fbe6fbe95385',
-        resolution: "standard_resolution",
-        template: '<div class="item"><a href="{{link}}"><img src="{{image}}"/></a><div class="carousel-caption"></div></div>',
-        after: function () {
-            $('#instafeed > div:nth-child(1)').addClass('active');
-        }
-    });
-    feed.run();
-</script>
-<hr>
-<div class="container instafeed">
-    <h2 class="text-center"><b>Instagram Feed</b></h2>
-    <img class="img-responsive center-block hidden-xs" src="../Images/insta.png" alt="Instagram Icon" height="64" width="64">
-    <div class="instagram hidden-xs">
-
-        <div id="myCarousel" class="carousel slide"  data-ride="carousel">
-            <div class="carousel-inner" role="listbox" interval="350" id="instafeed">
-            </div>
-            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
+            <!--<a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>-->
+            <a class="col-xs-4" href="https://www.facebook.com/FilmProductionsLA/" target="_blank">
+                <img src="../Images/Facebook%20Outline.png" class="logo-images">
             </a>
-            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
+            <!--<a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>-->
+            <a class="col-xs-4" href="https://www.instagram.com/filmproductionsla/" target="_blank">
+                <img src="../Images/Instagram%20Outline.png" class="logo-images">
+            </a>
+        </div>
+
+        <div class="row">
+        <!--<a href="https://twitter.com/csulafp" target="_blank">Twitter</a>-->
+            <a class="col-xs-4" href="https://twitter.com/csulafp" target="_blank">
+                <img src="../Images/twitter-outline.png" class="logo-images" style="filter:grayscale(0%)">
+            </a>
+                <!--<a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a>-->
+            <a class="col-xs-4" href="../Images/Snapcode%20Cropped.png" target="_blank">
+                    <img src="../Images/Snapchat%20Outline.png" class="logo-images">
+            </a>
+            <a class="col-xs-4" href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured" target="_blank">
+                <img src="../Images/YouTube%20Outline.png" class="logo-images">
             </a>
         </div>
     </div>
 </div>
+
+<!---------------------- START Instagram Feed ----------------------------->
+<!--<script type="text/javascript">-->
+<!--var feed = new Instafeed({-->
+<!--get: 'user',-->
+<!--userId: '1055527561',-->
+<!--sortBy: 'most-recent',-->
+<!--limit: '10',-->
+<!--accessToken: '1055527561.1677ed0.554b0c70d38647059ef0fbe6fbe95385',-->
+<!--resolution: "standard_resolution",-->
+<!--template: '<div class="item"><a href="{{link}}"><img src="{{image}}"/></a><div class="carousel-caption"></div></div>',-->
+<!--after: function () {-->
+<!--$('#instafeed > div:nth-child(1)').addClass('active');-->
+<!--}-->
+<!--});-->
+<!--feed.run();-->
+<!--</script>-->
+<!--<hr>-->
+<!--<div class="container instafeed">-->
+<!--<h2 class="text-center"><b>Instagram Feed</b></h2>-->
+<!--<img class="img-responsive center-block hidden-xs" src="../Images/insta.png" alt="Instagram Icon" height="64" width="64">-->
+<!--<div class="instagram hidden-xs">-->
+
+<!--<div id="myCarousel" class="carousel slide"  data-ride="carousel">-->
+<!--<div class="carousel-inner" role="listbox" interval="350" id="instafeed">-->
+<!--</div>-->
+<!--<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">-->
+<!--<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>-->
+<!--<span class="sr-only">Previous</span>-->
+<!--</a>-->
+<!--<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">-->
+<!--<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>-->
+<!--<span class="sr-only">Next</span>-->
+<!--</a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+<!--<script>-->
+<!--(function (i, s, o, g, r, a, m) {-->
+<!--i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {-->
+<!--(i[r].q = i[r].q || []).push(arguments)-->
+<!--}, i[r].l = 1 * new Date(); a = s.createElement(o),-->
+<!--m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)-->
+<!--})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');-->
+
+<!--ga('create', 'UA-79743314-1', 'auto');-->
+<!--ga('send', 'pageview');-->
+
+<!--</script>-->
+
 <!---------------------- END Instagram Feed ----------------------------->
-
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-79743314-1', 'auto');
-    ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
